# kopia-exporter

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/kopia_exporter/: __init__.py
tests/: test_init.py
utils/: kopia-exporter.service
