[project]
name = "kopia-exporter"
version = "0.1.0"
description = "Kopia Prometheus Exporter"
authors = [
    { name = "avigano", email = "alvistar@gmail.com" }
]
dependencies = [
    "prometheus-client>=0.20.0",
    "click>=8.1.7",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"kopia-exporter" = "kopia_exporter:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pre-commit>=3.8.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/kopia_exporter"]
